# handmade-hero

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.py  compile_commands.json  handmade-hero.cpp  handmade-hero.h  handmade-hero.sln  handmade-hero.vcxproj  handmade-hero.vcxproj.filters  win32-handmade-hero.cpp  win32-handmade-hero.h
.github/workflows/: cpplint.yml
src/handmade-hero/: handmade-hero.cpp  handmade-hero.h
src/win32/: win32-clock.cpp  win32-clock.h  win32-display.cpp  win32-display.h  win32-file-io.cpp  win32-file-io.h  win32-handmade-hero.cpp  win32-handmade-hero.h  win32-input.cpp  win32-input.h  win32-sound.cpp  win32-sound.h
